# chakravarti-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile.executor  LICENSE  Makefile  README.md  docker-compose.gitlab.yml  package-lock.json  package.json  release.toml  rustfmt.toml
.agent/: settings.local.json
.agent/workflows/: speckit.specify.md
.ckrv/workflows/: hello.yml  specify.yml  swe.yml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
crates/ckrv-cli/: Cargo.toml
crates/ckrv-cli/src/: main.rs  prompts.rs
crates/ckrv-cli/src/cloud/: auth.rs  client.rs  config.rs  credentials.rs  error.rs  jobs.rs  logs.rs  mod.rs
crates/ckrv-cli/src/commands/: diff.rs  fix.rs  init.rs  logs.rs  mod.rs  plan.rs  promote.rs  pull.rs  report.rs  run.rs  spec.rs  spec_structs.rs  status.rs  task.rs  ui.rs  verify.rs
crates/ckrv-cli/src/commands/cloud/: credentials.rs  login.rs  logout.rs  mod.rs  whoami.rs
crates/ckrv-cli/src/templates/: design-template.md  spec-template.yaml  tasks-template.yaml
crates/ckrv-cli/src/ui/: components.rs  mod.rs  spinner.rs  terminal.rs  theme.rs
crates/ckrv-cli/tests/: cli_init.rs  cli_inspect.rs  cli_optimize.rs  cli_promote.rs  cli_run.rs  cli_spec.rs
crates/ckrv-core/: Cargo.toml
crates/ckrv-core/src/: agent_task.rs  config.rs  error.rs  events.rs  job.rs  lib.rs  orchestrator.rs  plan.rs  planner.rs  prompt.rs  runner.rs  spec.rs  state.rs  step.rs  step_result.rs  workflow.rs
crates/ckrv-git/: Cargo.toml
crates/ckrv-git/src/: branch.rs  diff.rs  error.rs  lib.rs  worktree.rs
crates/ckrv-integrations/: Cargo.toml
crates/ckrv-integrations/src/: error.rs  lib.rs
crates/ckrv-metrics/: Cargo.toml
crates/ckrv-metrics/src/: collector.rs  cost.rs  error.rs  lib.rs  report.rs  time.rs
crates/ckrv-model/: Cargo.toml
crates/ckrv-model/src/: accounting.rs  anthropic.rs  error.rs  lib.rs  openai.rs  pricing.rs  provider.rs  router.rs
crates/ckrv-sandbox/: Cargo.toml
crates/ckrv-sandbox/examples/: test_docker.rs
crates/ckrv-sandbox/src/: allowlist.rs  docker.rs  env.rs  error.rs  executor.rs  lib.rs
crates/ckrv-spec/: Cargo.toml
crates/ckrv-spec/src/: error.rs  lib.rs  loader.rs  template.rs  validator.rs
crates/ckrv-ui/: Cargo.toml  build.rs
crates/ckrv-ui/frontend/: index.html  package-lock.json  package.json  playwright.config.ts
crates/ckrv-ui/frontend/playwright-report/: index.html
crates/ckrv-ui/frontend/src/: App.tsx  index.css  types.ts
crates/ckrv-ui/frontend/src/components/: AgentCliModal.tsx  AgentManager.tsx  ClarifyModal.tsx  CommandPalette.tsx  CompletionSummary.tsx  DiffViewer.tsx  ErrorBoundary.tsx  ExecutionRunner.tsx  LogTerminal.tsx  LogViewer.tsx  NewSpecDialog.tsx  PlanEditor.tsx  RunHistoryPanel.tsx  SpecEditor.tsx  SpecWorkflow.tsx  StatusWidget.tsx  TaskDetailModal.tsx  TaskEditor.tsx  WorkflowPanel.tsx
crates/ckrv-ui/frontend/src/components/ui/: LoadingButton.tsx  LoadingOverlay.tsx  badge.tsx  sonner.tsx  toast.tsx
crates/ckrv-ui/frontend/src/hooks/: useCommand.ts  useConnection.ts  useFocusTrap.ts  useRunHistory.ts  useSpec.ts  useTimeout.ts  useWebSocketReconnect.ts
crates/ckrv-ui/frontend/src/layouts/: Dashboard.tsx
crates/ckrv-ui/frontend/src/types/: history.ts  websocket.ts
crates/ckrv-ui/frontend/test-results/: .last-run.json
crates/ckrv-ui/frontend/tests/e2e/: accessibility.spec.ts  error-handling.spec.ts  execution-runner.spec.ts  responsive.spec.ts  visual-consistency.spec.ts
crates/ckrv-ui/frontend/tests/fixtures/sample-project/: package.json
crates/ckrv-ui/frontend/tests/fixtures/sample-project/specs/test-feature/: spec.yaml
crates/ckrv-ui/frontend/tests/helpers/: test-project.ts
crates/ckrv-ui/src/: hub.rs  lib.rs  server.rs  state.rs
crates/ckrv-ui/src/api/: agents.rs  cloud.rs  commands.rs  console.rs  diff.rs  docker.rs  events.rs  execution.rs  history.rs  mod.rs  plans.rs  session.rs  specs.rs  status.rs  tasks.rs  terminal.rs
crates/ckrv-ui/src/models/: history.rs  mod.rs
crates/ckrv-ui/src/services/: command.rs  engine.rs  history.rs  mod.rs
crates/ckrv-verify/: Cargo.toml
crates/ckrv-verify/src/: acceptance.rs  error.rs  lib.rs  parser.rs  runner.rs  verdict.rs
docker/: Dockerfile.agent  Dockerfile.ckrv  entrypoint.sh
docs/: coverage.md  optimization.md
docs/decisions/: 001-cargo-workspace.md  002-container-isolation.md
docs/demo/: .gitlab-ci.yml
npm/: .npmignore  README.md  install.js  package.json
scripts/: agent-switch.sh  bump-npm-versions.sh
specs/001-cli-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-css-theme-consolidation/: backup-colors.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-spec-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rich-cli-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-agent-orchestration/: architecture.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-web-ui-extension/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-cloud-executions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-bug-free-polished-ui/: bugs.md  data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-execution-state-sync/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-persistent-run-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-shadcn-ui-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: index.ts  types.ts
src/agents/: index.ts
src/commands/: assign.ts  chat.ts  dispatch.ts  gitlab.ts  init.ts  run.ts  setup.ts  sprint.ts  status.ts  up.ts  worker.ts  worktree.ts
src/docker/: container.ts
src/git/: gitlab.ts  worktree.ts
src/messaging/: queue.ts
src/orchestration/: executor.ts  prompts.ts
src/templates/: GEMINI.md  (+6 more)
(+34 files in other folders)
