[workspace]
resolver = "2"
members = [
    "crates/ckrv-cli",
    "crates/ckrv-core",
    "crates/ckrv-spec",
    "crates/ckrv-git",
    "crates/ckrv-sandbox",
    "crates/ckrv-model",
    "crates/ckrv-verify",
    "crates/ckrv-metrics",
    "crates/ckrv-integrations", "crates/ckrv-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chakravarti CLI Contributors"]
license = "MIT"
repository = "https://github.com/FnSK4R17s/chakravarti-cli"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git operations
git2 = "0.18"

# Docker/container operations
bollard = "0.16"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async trait
async-trait = "0.1"

# Futures utilities
futures-util = "0.3"

# Environment file loading
dotenvy = "0.15"

# Testing
tempfile = "3.9"

# Prompt templating
handlebars = "6.2"

# Shell escaping
shell-escape = "0.1"

# Internal crates
ckrv-core = { path = "crates/ckrv-core" }
ckrv-spec = { path = "crates/ckrv-spec" }
ckrv-git = { path = "crates/ckrv-git" }
ckrv-sandbox = { path = "crates/ckrv-sandbox" }
ckrv-model = { path = "crates/ckrv-model" }
ckrv-verify = { path = "crates/ckrv-verify" }
ckrv-metrics = { path = "crates/ckrv-metrics" }
ckrv-integrations = { path = "crates/ckrv-integrations" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
