[package]
name = "ckrv-cli"
description = "Command-line interface for Chakravarti"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ckrv"
path = "src/main.rs"

[dependencies]
ckrv-core = { workspace = true }
ckrv-spec = { workspace = true }
ckrv-git = { workspace = true }
ckrv-sandbox = { workspace = true }
ckrv-model = { workspace = true }
ckrv-verify = { workspace = true }
ckrv-metrics = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
futures = "0.3"
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
indicatif = "0.18.3"
termimad = "0.34.1"
tabled = { version = "0.20.0", features = ["ansi"] }
console = "0.16.2"
dialoguer = "0.12.0"
shell-escape = "0.1"
serde_yaml = { workspace = true }
chrono = { workspace = true }
ckrv-ui = { version = "0.1.0", path = "../ckrv-ui" }
open = "5.3.3"

# Cloud execution support
reqwest = { version = "0.12", features = ["json", "stream"] }
keyring = "3.6"
rpassword = "7.3"
dirs = "5.0"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
