[package]
name = "ckrv-sandbox"
description = "Containerized execution for Chakravarti CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bollard = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
