[package]
name = "ckrv-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8.4"
chrono.workspace = true
futures-util.workspace = true
mime_guess = "2.0.5"
rust-embed = "8.9.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

[lints]
workspace = true
