[package]
name = "ckrv-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22"
bollard = "0.16"
chrono.workspace = true
dirs = "5.0"
futures-util.workspace = true
mime_guess = "2.0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8.9.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
ckrv-sandbox = { workspace = true }
ckrv-core = { workspace = true }
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }
anyhow = { workspace = true }
ckrv-git = { workspace = true }
ckrv-metrics = { workspace = true }
futures = "0.3"
shell-escape = "0.1"

[lints]
workspace = true
